# sdk.py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  publish.yml  release.yml  test.yml
sdk/: __init__.py  api.py  authentication.py  authentications.py  collection.py  collections.py  data.py  decorators.py  endpoint.py  endpoints.py  enums.py  request.py  response.py  typing.py
tests/: test_api.py  test_authentications.py  test_collections.py  test_endpoints.py  test_request.py  test_response.py
