[tool.poetry]
name = "sdk.py"
version = "0.1.0"
description = "A high-level library to build SDK interfaces"
authors = ["Willian Morais <williandmorais@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.6"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
