[tool.poetry]
name = "sdk.py"
version = "0.2.0"
description = "A high-level library to build SDK interfaces"
authors = ["Willian Morais <williandmorais@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/morais90/sdk.py"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "sdk" }]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.12"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
black = "^22.6"
isort = "^5.10.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/morais90/sdk.py/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_variable = "sdk/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_pypi = false
upload_to_release = false
build_command = false